--- a/main.html
+++ b/main.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Color Grid</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div id="grid-container">
+        <!-- Creating the 3x3 grid dynamically with JavaScript -->
+    </div>
+    <input type="number" id="block_id" placeholder="Enter Block ID (1-9)" min="1" max="9">
+    <input type="text" id="colour_id" placeholder="Enter Color">
+    <button id="change_button">Change Color</button>
+    <button id="Reset">Reset</button>
+    
+    <script src="script.js"></script>
 </body>
-
 </html>
