--- a/main.html
+++ b/main.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="grid-container">
+    <div class="grid-container" id="grid-container">
         <!-- Creating the 3x3 grid dynamically with JavaScript -->
     </div>
     <input type="number" id="block_id" placeholder="Enter Block ID (1-9)" min="1" max="9">
     <input type="text" id="colour_id" placeholder="Enter Color">
-    <button id="change_button">Change Color</button>
-    <button id="Reset">Reset</button>
+    <button id="change_button">Change</button>
+    <button id="reset_button">Reset</button>
     
     <script src="script.js"></script>
 </body>
